First running version

--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,11 @@ project.ext {
 configurations.all*.exclude group: 'blowfish'
 
 dependencies {
+	providedCompile "com.sun.jersey:jersey-server:1.1.5.1"
 	compile 'javax:javaee-web-api:6.0'
     compile "${moskitoGroup}:moskito-core:${moskitoVersion}",
             "${moskitoGroup}:moskito-cdi:${moskitoVersion}"
+
+
+    testCompile 'junit:junit:4.11', 'org.mockito:mockito-core:1.9.5-rc1'
 }
